--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset='utf8'>
 	<meta name='viewport' content='width=device-width'>
-
+	<script src="https://cdn.jsdelivr.net/gh/google/code-prettify@master/loader/run_prettify.js"></script>
 	<title>Svelte app</title>
 
 	<link rel='icon' type='image/png' href='/favicon.png'>
