--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,8 @@
 	<meta charset='utf8'>
 	<meta name='viewport' content='width=device-width'>
 	<script src="https://cdn.jsdelivr.net/gh/google/code-prettify@master/loader/run_prettify.js"></script>
+	<link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+	<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 	<title>Svelte app</title>
 
 	<link rel='icon' type='image/png' href='/favicon.png'>
@@ -14,5 +16,8 @@
 </head>
 
 <body>
+	<script>
+			AOS.init();
+	</script>
 </body>
 </html>
