--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,11 @@
 	<link rel='stylesheet' href='/global.css'>
 	<link rel='stylesheet' href='/bundle.css'>
 
+	<!-- TODO remove later -->
+	<meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
+	<meta http-equiv="Pragma" content="no-cache" />
+	<meta http-equiv="Expires" content="0" />
+
 	<script defer src='/bundle.js'></script>
 </head>
 
