req full screen

--- a/public/index.html
+++ b/public/index.html
@@ -23,6 +23,9 @@
 <body>
 	<script>
 			AOS.init();
+			if (document.fullscreenEnabled) {
+				document.documentElement.requestFullscreen()
+			}
 	</script>
 </body>
 </html>
