--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
 	<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 	<title>Jakarta! Learn to code</title>
 
-	<link rel='icon' type='image/png' href='favicon.png'>
+	<link rel='icon' type='image/png' href='static/chars/Diah.png'>
 	<link rel='stylesheet' href='global.css'>
 	<link rel='stylesheet' href='bundle.css'>
 
